# purs

./: Cargo.toml  README.md  compile  curls.md  lint.sh  run-tests  test-compile  test.json  test2.json  test3.json  todo.md
.github/workflows/: build-linux.yml  build-mac.yml  release-linux.yml  release-mac.yml
src/: avatar.rs  avatar_cache.rs  cli.rs  console.rs  file_tools.rs  file_writer.rs  github.rs  log.rs  main.rs  model.rs  process.rs  tools.rs  tui_app.rs  user_dir.rs
src/avatar/: tests.rs
src/model/: tests.rs
src/user_dir/: tests.rs
