[package]
name = "purs"
version = "0.2.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.15"
url = "2.2"
tokio = { version = "1", features = ["full"] }
ansi_term = "0.12"
unidiff = "0.3"
futures = "0.3"
clap = { version = "3", features = ["default" ,"env"] }
dirs = "4.0"
tui = "0.17"
crossterm = "0.22"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11"
base64 = "0.13"
