[package]
name = "purs"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.37"
url = "2"
tokio = { version = "1", features = ["full"] }
ansi_term = "0.12"
unidiff = "0.3"
futures = "0.3"
clap = { version = "3", features = ["default" ,"env"] }
dirs = "5"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
base64 = "0.22"
crossterm = "0.27"
ratatui = "0.26.1"

[dev-dependencies]
tempfile = "3"
wiremock = "0.5"
pretty_assertions = "1.2"

[[bin]]
name = "purs"
path = "src/main.rs"

[[bin]]
name = "avatar_cache"
path = "src/avatar_cache.rs"
